--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -178,10 +178,7 @@ reward:
   QR_code:
     - img: https://cdn.jsdelivr.net/gh/youngjuning/images/wechat.png
       # link:
-      text: 微信
-    - img: https://cdn.jsdelivr.net/gh/youngjuning/images/alipay7.png
-      # link:
-      text: 支付宝
+      text: 微信打赏
 
 # Post edit
 # Easily browse and edit blog source code online.
@@ -776,11 +773,11 @@ subtitle:
 
 # Loading Animation (加載動畫)
 preloader:
-  enable: false
+  enable: true
   # source
   # 1. fullpage-loading
   # 2. pace (progress bar)
-  source: 1
+  source: 2
   # pace theme (see https://codebyzach.github.io/pace/)
   pace_css_url:
 
@@ -843,7 +840,7 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: false
+  enable: true
   exclude:
     # - xxxx
     # - xxxx
