--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -88,7 +88,7 @@ cover:
   # left/right/both
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
-  default_cover
+  default_cover:
     - https://s2.loli.net/2023/07/17/9JQuLefqURI7DYi.png
     - https://s2.loli.net/2023/07/17/qkCs3dgYblAB7ar.png
     - https://s2.loli.net/2023/07/17/XvsoykKqNSQbBUj.png
