--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,10 @@ timezone: Asia/Hong_Kong
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://caoyuan.netlify.app
-permalink: :hash/
+permalink: :abbrlink/
+abbrlink:
+  alg: crc32  # 算法：crc16(default) and crc32
+  rep: hex    # 进制：dec(default) and hex
 permalink_defaults:
 pretty_urls:
   trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
