--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -213,7 +213,7 @@ footer:
   owner:
     enable: true
     since: 2023
-  custom_text: <a href="https://netlify.com/" target="_blank">Netlify</a> | <a href="/rss2.xml" target="_blank">RSS2</a> | <a href="/atom.xml" target="_blank">Atom</a><br/><a href="https://www.cnouyi.careers/join/54171828" nofollow target="_blank">欧易 - 注册开盲盒赢 BTC</a><br/><a href="https://sockboom.shop/auth/register?affid=552052" nofollow target="_blank">SockBoom - 稳定的科学上网梯子</a><br/><a href="https://www.pionex.com/zh-CN/sign/ref/0rcaD2ex9Om" nofollow target="_blank">Pionex 派网 - 网格交易| 量化交易</a><br/><a href="https://app.netlify.com/sites/caoyuan/deploys" target="_blank"" nofollow><img alf="Netlify Status" src="https://api.netlify.com/api/v1/badges/4facf56b-b52f-4d92-9bd3-201a3885b5eb/deploy-status"/></a>
+  custom_text: <a href="https://netlify.com/" target="_blank">Netlify</a> | <a href="/rss2.xml" target="_blank">RSS2</a> | <a href="/atom.xml" target="_blank">Atom</a><br/><a href="https://www.cnouyi.careers/join/54171828" nofollow target="_blank">欧易 - 注册开盲盒赢 BTC</a><br/><a href="https://sockboom.shop/auth/register?affid=552052" nofollow target="_blank">SockBoom - 稳定的科学上网梯子</a><br/><a href="https://www.pionex.com/zh-CN/sign/ref/0rcaD2ex9Om" nofollow target="_blank">Pionex 派网 - 网格交易| 量化交易</a>
   copyright: false # Copyright of theme and framework
 
 # aside (側邊欄)
