--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -3,7 +3,7 @@
 # --------------------------------------
 
 nav:
-  logo: https://cdn.jsdelivr.net/gh/youngjuning/images@main/1689511305557.png # image
+  logo: https://s2.loli.net/2023/07/17/uOiwsNkbm4LcVxX.png # image
   display_title: true
   fixed: false # fixed navigation bar
 
@@ -42,28 +42,28 @@ social:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: https://cdn.jsdelivr.net/gh/youngjuning/images@main/1689511305557.png
+favicon: https://s2.loli.net/2023/07/17/uOiwsNkbm4LcVxX.png
 
 # Avatar (頭像)
 avatar:
-  img: https://cdn.jsdelivr.net/gh/youngjuning/images@main/1689511305557.png
+  img: https://s2.loli.net/2023/07/17/uOiwsNkbm4LcVxX.png
   effect: true
 
 # Disable all banner image
 disable_top_img: false
 
 # The banner image of home page
-index_img: 'linear-gradient(20deg, #0062be, #925696, #cc426e, #fb0347)'
+index_img: https://cdn.jsdelivr.net/gh/youngjuning/images@main/1689604945346.png
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: https://pic2.zhimg.com/80/v2-7099d20a6239795a13c1525a44e243bd_1440w.webp
+default_top_img: https://s2.loli.net/2023/07/17/leDBhzw8xEnOmS6.png
 
 # The banner image of archive page
-archive_img: https://pic4.zhimg.com/80/v2-6113723ecbada94dbf8751d0f29ad5ef_1440w.webp
+archive_img: https://s2.loli.net/2023/07/17/xoflNAZpqPTFKU9.png
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img: https://pic1.zhimg.com/80/v2-4ed8b3b51b575091c441e029b9b6c674_1440w.webp
+tag_img: https://s2.loli.net/2023/07/17/wvkgLUtdju3hYqr.png
 
 # The banner image of tag page
 # format:
@@ -72,7 +72,7 @@ tag_per_img:
 
 # If the banner of category page not setting, it will show the top_img
 # note: category page, not categories page (子分類頁面的 top_img)
-category_img: https://pic4.zhimg.com/80/v2-a2027da69f624d7a36d8c8f344a3f08f_1440w.webp
+category_img: https://s2.loli.net/2023/07/17/i8TsAaOQYEj1kIv.png
 
 # The banner image of category page
 # format:
@@ -107,7 +107,7 @@ error_img:
 error_404:
   enable: true
   subtitle: 'Page Not Found'
-  background: https://i.loli.net/2020/05/19/aKOcLiyPl2JQdFD.png
+  background: https://s2.loli.net/2023/07/17/eykG9VnwtRLOXrT.png
 
 post_meta:
   page: # Home Page
@@ -181,10 +181,10 @@ reward:
 # Post edit
 # Easily browse and edit blog source code online.
 post_edit:
-  enable: false
+  enable: true
   # url: https://github.com/user-name/repo-name/edit/branch-name/subdirectory-name/
   # For example: https://github.com/jerryc127/butterfly.js.org/edit/main/source/
-  url:
+  url: https://github.com/zizhuspot/caoyuan/edit/main/source/
 
 # Related Articles
 related_post:
@@ -207,6 +207,7 @@ noticeOutdate:
   position: top # position: top/bottom
   message_prev: It has been
   message_next: days since the last update, the content of the article may be outdated.
+
 # Footer Settings
 # --------------------------------------
 footer:
@@ -320,7 +321,7 @@ darkmode:
   # autoChangeMode: 1  Following System Settings, if the system doesn't support dark mode, it will switch dark mode between 6 pm to 6 am
   # autoChangeMode: 2  Switch dark mode between 6 pm to 6 am
   # autoChangeMode: false
-  autoChangeMode: false
+  autoChangeMode: true
   # Set the light mode time. The value is between 0 and 24. If not set, the default value is 6 and 18
   start: # 8
   end: # 22
@@ -591,7 +592,7 @@ google_adsense:
   enable_page_level_ads: true
 
 # Insert ads manually (手動插入廣告)
-# ad:
+ad:
   # index: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7029815294762181" data-ad-slot="6412968057" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   # aside: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7029815294762181" data-ad-slot="9692865372" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   # post: <ins class="adsbygoogle" style="display:block" data-ad-format="autorelaxed" data-ad-client="ca-pub-7029815294762181"data-ad-slot="4521975302"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
