--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -573,7 +573,7 @@ baidu_analytics:
 
 # Google Analytics
 # https://analytics.google.com/analytics/web/
-google_analytics:
+google_analytics: G-0PZRSXVZSD
 
 # Cloudflare Analytics
 # https://www.cloudflare.com/zh-tw/web-analytics/
