--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: googledaba3bcb44e9d978.html
+skip_render: googled29fba422c357ff8.html
 
 # Writing
 new_post_name: :title.md # File name of new posts
