--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
-  - googled29fba422c357ff8.html
+  - googledaba3bcb44e9d978.html
 
 # Writing
 new_post_name: :title.md # File name of new posts
