--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -53,7 +53,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://cdn.jsdelivr.net/gh/youngjuning/images@main/1689604945346.png
+index_img: https://s2.loli.net/2023/08/13/AxuQz4W8y3D1LiT.webp
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: https://s2.loli.net/2023/07/17/leDBhzw8xEnOmS6.png
