--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -497,7 +497,7 @@ twikoo:
 # Giscus
 # https://giscus.app/
 giscus:
-  repo: zizhuspot/caoyuan
+  repo: zizhuspot/www.quant1098.com
   repo_id: R_kgDOJ8I6qw
   category_id: DIC_kwDOJ8I6q84CX9AC
   theme:
