--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -591,15 +591,14 @@ google_adsense:
   enable: true
   auto_ads: true
   js: https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js
-  client: ca-pub-7029815294762181
+  client: ca-pub-7161227527096268
   enable_page_level_ads: true
 
 # Insert ads manually (手動插入廣告)
 ad:
-  # index: <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-e1-2t+fn+p-hd" data-ad-client="ca-pub-7029815294762181" data-ad-slot="1193023202"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  # index: <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-e8-2i+gt+l-li" data-ad-client="ca-pub-7161227527096268" data-ad-slot="1759501970"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   # aside: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7029815294762181" data-ad-slot="9692865372" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-  # post: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7029815294762181" data-ad-slot="4304483260" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
+  # post: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7161227527096268" data-ad-slot="1567930286" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 # Verification (站長驗證)
 # --------------------------------------
 
