--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -767,8 +767,9 @@ subtitle:
   # source: 1  調用一言網的一句話（簡體） https://hitokoto.cn/
   # source: 2  調用一句網（簡體） https://yijuzhan.com/
   # source: 3  調用今日詩詞（簡體） https://www.jinrishici.com/
+  # source: 4  調用forismatic（英文） https://forismatic.com/en/api/
   # subtitle 會先顯示 source , 再顯示 sub 的內容
-  source: 2
+  source: 4
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
 
