--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -767,11 +767,20 @@ subtitle:
   # source: 1  調用一言網的一句話（簡體） https://hitokoto.cn/
   # source: 2  調用一句網（簡體） https://yijuzhan.com/
   # source: 3  調用今日詩詞（簡體） https://www.jinrishici.com/
-  # source: 4  調用forismatic（英文） https://forismatic.com/en/api/
   # subtitle 會先顯示 source , 再顯示 sub 的內容
-  source: 4
+  source: 2
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
+  # The greatest glory in living lies not in never falling, but in rising every time we fall. - Nelson Mandela
+  # The way to get started is to quit talking and begin doing. - Walt Disney 
+  # Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma – which is living with the results of other people's thinking. - Steve Jobs
+  # If you look at what you have in life, you'll always have more. If you look at what you don't have in life, you'll never have enough. - Oprah Winfrey
+  # If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success. - James Cameron
+  # Spread love everywhere you go. Let no one ever come to you without leaving happier. - Mother Teresa
+  # When you reach the end of your rope, tie a knot in it and hang on. - Franklin D. Roosevelt
+  # Don't judge each day by the harvest you reap but by the seeds that you plant. - Robert Louis Stevenson 
+  # The future belongs to those who believe in the beauty of their dreams. - Eleanor Roosevelt
+  # The only impossible journey is the one you never begin. - Tony Robbins
 
 # Loading Animation (加載動畫)
 preloader:
